--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
        DBTABLE: ${DBTABLE}
        DBUSER: ${DBUSER}
        DBPASS: ${DBPASS}
-    ports:
-      - 5432:5432
+         #    ports:
+         #  - 5432:5432
 
   adminer:
     image: adminer
@@ -25,6 +25,28 @@ services:
       - db
     ports:
       - 8088:8080
-  
-        #  gobuild:
-        #    image: golang:1.19
+
+  gobuilder:
+    image: golang:1.19-alpine
+    restart: "no"
+    volumes:
+      - ./:/goe
+    working_dir: /goe
+    environment:
+      GOOS: linux
+    entrypoint: sh -c "rm ${OUTFILE};go build -o ${OUTFILE} server.go"
+
+  gorun:
+    image: gcr.io/distroless/static-debian11
+    restart: always
+    depends_on:
+      - gobuilder
+    environment:
+      PORT: ${PORT}
+      DATABASE_URL: postgres://${DBUSER}:${DBPASS}@db:5432/${DBNAME}
+    ports:
+      - ${PORT}:${PORT}
+    volumes:
+      - ./server.out:${OUTFILE}
+    entrypoint:
+      - sh -c 'while [ ! -f ${OUTFILE} ]; do sleep 2; done; ${OUTFILE} --action=web'
