--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ DBPASS=opiopisafd-0
 DBTABLE=expenses
 POSTGRES_CNT_PASSWORD=posspleax
 PORT=2565
-OUTFILE=/goe/server.out
+OUTFILE=/goe/expenser
+OUTNAME=expenser
+OUTPATH=/goe
