--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     environment:
       GOOS: linux
       GOARCH: amd64
+      CGO_ENABLED: 0
     entrypoint: sh -c "rm ${OUTNAME};go build -o ${OUTNAME}"
 
   gorun:
@@ -43,7 +44,7 @@ services:
       - db
     environment:
       PORT: ${PORT}
-      DATABASE_URL: "postgres://${DBUSER}:${DBPASS}@db:5432/${DBNAME}"
+      DATABASE_URL: "postgres://${DBUSER}:${DBPASS}@db:5432/${DBNAME}?sslmode=disable"
     working_dir: ${OUTPATH}
     ports:
       - ${PORT}:${PORT}
